--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,18 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
-    "helmet": "^6.0.0",
+    "helmet": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.13.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
